# fastapi-poetry-test

./: README.md  main.py  pyproject.toml
